# coupler

examples/gain_no_ui/: Cargo.toml
examples/gain_no_ui/format/clap/: Cargo.toml
examples/gain_no_ui/format/clap/src/: lib.rs
examples/gain_no_ui/format/vst3/: Cargo.toml
examples/gain_no_ui/format/vst3/src/: lib.rs
examples/gain_no_ui/src/: lib.rs
examples/tube/: Cargo.toml
examples/tube/format/clap/: Cargo.toml
examples/tube/format/clap/src/: lib.rs
examples/tube/format/vst3/: Cargo.toml
examples/tube/format/vst3/src/: lib.rs
examples/tube/src/: dsp.rs  engine.rs  lib.rs  logging.rs
examples/tube/src/dsp/: delayline.rs  env.rs  onepole.rs  resample.rs  simper.rs  skf.rs  smooth.rs
src/buffers/: iter.rs
