[package]
name = "tube"
version = "0.1.0"
authors = ["Sintel"]
edition = "2021"
publish = false

[dependencies]
coupler = { workspace = true, features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bit_mask_ring_buf = "0.6"
num-complex = "0.4.6"
log = "0.4"
simple-logging = "2.0"
log-panics = { version = "2", features = ["with-backtrace"]}
