[package]
name = "gain_no_ui-clap"
version = "0.1.0"
authors = ["Micah Johnston <micah@photophore.systems>"]
edition = "2021"
publish = false

[package.metadata.coupler]
name = "gain_no_ui"
formats = ["clap"]

[lib]
crate-type = ["cdylib"]

[dependencies]
coupler = { workspace = true }
gain_no_ui = { path = "../.." }
