[package]
name = "gain_no_ui-vst3"
version = "0.1.0"
authors = ["Micah Johnston <micah@photophore.systems>"]
edition = "2021"
publish = false

[package.metadata.coupler]
name = "gain_no_ui"
formats = ["vst3"]

[lib]
crate-type = ["cdylib"]

[dependencies]
coupler = { workspace = true }
gain_no_ui = { path = "../.." }
